--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,6 @@ Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
 MimiFAIR = "73d86c50-c5fa-11e9-3497-c3dc913e627a"
 MimiFUND = "b3ba11de-429f-11e9-29f7-cb478ab96e7c"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
+
+[compat]
+Mimi = "1.3"
